openshadinglanguage-git/0-TESTS-COMPIL-1.8.3.20170204.LLVM-3.9-4.0/0-Erreur-Compile-LLVM-3.9-4.0.1.8.3.20170204.TXT
[ 81%] Building CXX object src/liboslexec/CMakeFiles/oslexec.dir/llvm_util.cpp.o
[ 82%] Building CXX object src/liboslexec/CMakeFiles/oslexec.dir/__/liboslcomp/ast.cpp.o
/build/openshadinglanguage-git/src/osl/src/liboslexec/llvm_util.cpp: In member function 'llvm::Module* OSL::pvt::LLVM_Util::module_from_bitcode(const char*, size_t, const string&, std::__cxx11::string*)':
/build/openshadinglanguage-git/src/osl/src/liboslexec/llvm_util.cpp:534:42: error: conversion from 'llvm::MemoryBuffer*' to non-scalar type 'std::unique_ptr<llvm::MemoryBuffer>' requested
         llvm::MemoryBuffer::getMemBuffer (llvm::StringRef(bitcode, size),
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                           name, false);
                                           ~~~~~~~~~~~~
/build/openshadinglanguage-git/src/osl/src/liboslexec/llvm_util.cpp:538:69: error: cannot convert 'std::remove_reference<std::unique_ptr<llvm::MemoryBuffer>&>::type {aka std::unique_ptr<llvm::MemoryBuffer>}' to 'llvm::MemoryBuffer*' for argument '1' to 'llvm::ErrorOr<llvm::Module*> llvm::getLazyBitcodeModule(llvm::MemoryBuffer*, llvm::LLVMContext&)'
                                                            context());
                                                                     ^
/build/openshadinglanguage-git/src/osl/src/liboslexec/llvm_util.cpp: In member function 'void OSL::pvt::LLVM_Util::do_optimize(std::__cxx11::string*)':
/build/openshadinglanguage-git/src/osl/src/liboslexec/llvm_util.cpp:773:5: error: 'LLVMErr' was not declared in this scope
     LLVMErr err = m_llvm_module->materializeAll();
     ^~~~~~~
/build/openshadinglanguage-git/src/osl/src/liboslexec/llvm_util.cpp:774:32: error: 'err' was not declared in this scope
     if (error_string(std::move(err), out_err))
                                ^~~
make[2]: *** [src/liboslexec/CMakeFiles/oslexec.dir/build.make:808: src/liboslexec/CMakeFiles/oslexec.dir/llvm_util.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:1129: src/liboslexec/CMakeFiles/oslexec.dir/all] Error 2
make: *** [Makefile:161: all] Error 2
==> ERROR: A failure occurred in build().
    Aborting...
